lesson8/css/main.css
body {
	font-size: 18px;
	line-height: 1;
	font-family: 'Montserrat', sans-serif;
	margin-right: 1rem;
	margin-left: 1rem;
}

header {
	background-color: #045ea8;
	color: #fff;
	display: flex;
	align-items: center;
	justify-content: center;

}

footer {
	background-color: #455b6d;
	color: #fff;
	text-align: center;
	padding: 1.5rem;
}

nav {
	background-color: #ff9409;
}

h2 {
	text-align: center;
}

header img {
	width: 80px;
	height: auto;
}

p {
	font-family: 'Assistant', sans-serif;
}

div:not(#banner) {
	max-width: 960px;
	margin: auto;
}

noscript p {
	background-color: rgb(221, 61, 61);
	padding: 1rem;
	text-align: center;
	font-weight: bolder;
}

nav {
	margin: 0 auto;

}

.navigation {
	list-style: none;
	padding: 0;
}

.navigation li:first-child {
	display: block;
}

.navigation li {
	display: none;
}

.navigation a {
	display: block;
	padding: 0.75rem;
	text-align: center;
	text-decoration: none;
	color: Black;
	font-weight: bold;
}


.responsive li {
	display: block;
}

body#preston #active {
	background-color: #455b6d;
	color: white;
}

body#gallery #active {
	background-color: #455b6d;
	color: white;
}

body#storm #active {
	background-color: #455b6d;
	color: white;
}

.imgcontain {
	display: grid;
	grid-template-columns: 1fr;
	text-align: center;
}

.gallery-item img {
	width: 90%;
	height: auto;
}

.containerone {
	position: relative;
	text-align: center;
	margin-bottom: 1rem;
}

.containerone img {
	width: 100%;
}

.summary {

	position: absolute;
	top: 15px;
	left: 15px;
	padding: .7em;
	background-color: rgb(190, 187, 187, 0.6);
	font-weight: bold;
}

.forcast {
	padding: 1em;
	text-align: center;
}

.forcast img {
	width: 100%;
}

.article {
	border-style: solid;
	padding: 1rem;

}

.articleimage img {
	float: right;
	width: 40%;
	padding: 1rem;
}

.forcast {
	display: none;
}

.contimg {
	display: none;
}

/*Storm Center page formatting*/

fieldset {
	margin: 2rem auto;
	border-color: #ff9409;
	border-style: solid;
}

fieldset>legend {
	font-weight: bolder;
	font-size: 24px;
	text-align: center;
}

.storm div label {
	float: left;
	margin: 10px;
}

.button {
	text-align: center;
}

.submit {
	padding: 1rem;
	margin: 2rem auto;
}

form div {
	clear: left;
	margin: 0;
	padding: 0;
	padding-top: 5px;
}

form div label {
	float: left;
	width: 40%;
	font-weight: bold;
}


label span {
	display: block;
	padding-top: 0.7rem;
	padding-bottom: 0.2rem;
	text-align: left;
}

.slider {
	min-width: 50%;
	background-color: orangered;
}

textarea {
	width: 100%;
}

.comment {
	text-align: right;
}

.thanks {
	max-width: 300px;
	border: 15px solid #045ea8;
	padding: 30px;
	margin: 50px;
}

/* Media Query for MEDIUM views */
@media only screen and (min-width: 500px) {

	header img {
		width: 100%;
	}

	.navigation {
		display: flex;
	}

	.navigation li {
		display: block;
		flex: 1 1 auto;
	}

	.navigation a {
		text-align: center;
	}

	.navigation li:first-child {
		display: none;
	}

	.navigation a:hover {
		background-color: #455b6d;
		color: white;
	}

	.containerone {
		position: relative;
		text-align: center;
		margin-bottom: 1rem;
	}

	.containerone img {
		width: 100%;
	}

	.summary {

		position: absolute;
		top: 15px;
		left: 15px;
		padding: .7em;
		background-color: rgb(190, 187, 187, 0.6);
		font-weight: bold;
	}

	.forcast {
		display: block;
		padding: 1em;
		text-align: center;
	}

	.forcast img {
		width: 100%;
	}

	footer {
		display: block;
		text-align: center;
		margin: 10px auto;
		max-width: 1000px;
	}

	.imgcontain {
		display: grid;
		grid-template-columns: 1fr 1fr;
		text-align: center;
	}

	.gallery-item img {
		width: 90%;
		height: auto;
	}

	.contimg {
		display: block;
		grid-column: 1/2;
		grid-row: 1/2;
		max-width: 100%;
		max-height: 100%;
		padding-top: 1em;
	}

	/*Storm Center page formatting*/

	.subform {
		min-width: 300px;
		max-width: 750px;
		margin: 2rem auto;
		padding: 2rem;
	}

	fieldset {
		margin: auto;
		border-color: #ff9409;
		border-style: solid;
	}

	fieldset>legend {
		font-weight: bolder;
		font-size: 24px;
		text-align: center;
	}

	.personal label {
		margin: 10px;
	}


	.storm label {
		margin: 10px;
	}

	.safety {
		text-align: center;
	}

	.safety label {
		margin: 10px;
	}

	.button {
		text-align: center;
	}

	.submit {
		padding: 1rem;
		margin: 2rem auto;
	}

	label {
		display: block;
	}

	/*Storm Center page formatting*/

	.subform {
		max-width: 750px;
		margin: 2rem auto;
		padding: 2rem;
	}

	fieldset {
		margin: 2rem auto;
		border-color: #ff9409;
		border-style: solid;
	}

	fieldset>legend {
		font-weight: bolder;
		font-size: 24px;
		text-align: center;
	}


	.storm div label {
		float: left;
		margin: 10px;
	}

	.button {
		text-align: center;
	}

	.submit {
		padding: 1rem;
		margin: 2rem auto;
	}

	form div {
		clear: left;
		margin: 0;
		padding: 0;
		padding-top: 5px;
	}

	form div label {
		float: left;
		width: 40%;
		font-weight: bold;
	}

	textarea {
		min-width: 450px;
	}

	label span {
		display: block;
		padding-top: 0.7rem;
		padding-bottom: 0.2rem;
		text-align: left;
	}

	.slider {
		min-width: 50%;
		background-color: orangered;
	}

}

	/* Media Query for LARGE views */
	@media only screen and (min-width: 1000px) {
		header img {
			width: 100%;
		}

		.navigation {
			display: flex;
		}

		.navigation li {
			display: block;
			flex: 1 1 auto;
		}

		.navigation a {
			text-align: center;
		}

		.navigation li:first-child {
			display: none;
		}

		.navigation a:hover {
			background-color: #455b6d;
			color: white;
		}

		footer {
			display: block;
			text-align: center;
			margin: 10px auto;
			max-width: 1000px;
		}

		.containerone {
			position: relative;
			text-align: center;
			margin-bottom: 1rem;
		}

		.containerone img {
			width: 100%;
		}

		.summary {

			position: absolute;
			top: 15px;
			left: 15px;
			padding: .7em;
			background-color: rgb(190, 187, 187, 0.6);
			font-weight: bold;
		}

		.forcast {
			display: block;
			padding: 1em;
			text-align: center;
		}

		.forcast img {
			width: 100%;
		}

		.article {
			border-style: solid;
			padding: 1rem;

		}

		.articleimage img {
			float: right;
			width: 40%;
			padding: 1rem;
		}

		.contact {
			background-color: lightgrey;
			padding-left: 1em;
			padding-right: 1em;
			padding-bottom: 1em;
			display: grid;
			grid-template-columns: repeat(2, 1fr);
			grid-template-rows: repeat(1, 1fr);
		}

		.contactinfo {
			grid-column: 2/3;
			grid-row: 1/2;
			padding: 2rem;
			text-align: center;
			margin: auto;
		}

		.contimg {
			display: block;
			grid-column: 1/2;
			grid-row: 1/2;
			max-width: 100%;
			max-height: 100%;
			padding-top: 1em;
		}

		.imgcontain {
			display: grid;
			grid-template-columns: 1fr 1fr 1fr;
			text-align: center;
		}

		.imgcontain:not(#banner) {
			max-width: 1500px;
			margin: auto;
		}

		.gallery-item img {
			width: 90%;
			height: auto;
			text-align: center;
		}

		.gallery-item {
			padding-top: 3rem;
		}

		.gallery-item:hover {
			box-shadow: 0 0 50px #333;
		}

		/*Storm Center page formatting*/

		.subform {
			min-width: 300px;
			max-width: 750px;
			margin: 2rem auto;
			padding: 2rem;
		}

		fieldset {
			width: 600px;
			margin: 2rem auto;
			border-color: #ff9409;
			border-style: solid;
		}

		fieldset>legend {
			font-weight: bolder;
			font-size: 24px;
			text-align: center;
		}


		.storm div label {
			float: left;
			margin: 10px;
		}

		.button {
			text-align: center;
		}

		.submit {
			padding: 1rem;
			margin: 2rem auto;
		}

		form div label {
			float: left;
			width: 40%;
			font-weight: bold;
		}

		label span {
			display: block;
			padding-top: 0.7rem;
			padding-bottom: 0.2rem;
			text-align: left;
		}

		.slider {
			min-width: 50%;
			background-color: orangered;
		}

	}

